--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -23,11 +23,11 @@ void *init_clinterval_callbacks_state() {
     return (void*) s;
 }
 
-static void create_and_enqueue_host_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name, 
+static void create_and_enqueue_host_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
                                             const uint64_t ts, const uint64_t duration, const bool err) {
 
      /* Message creation */
-     bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err, 
+     bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
                                                clinterval_iter_g->dispatch->host_event_class,
                                                clinterval_self_message_iterator_g,
                                                clinterval_iter_g->dispatch->stream);
@@ -36,23 +36,23 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      state->downstream_message_queue.push(message);
 }
 
-static void create_and_enqueue_device_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, 
+static void create_and_enqueue_device_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id,
                                               const thapi_device_id device_id, const thapi_device_id subdevice_id,
                                               const char* name, const uint64_t ts, const uint64_t duration, const bool err) {
-    
+
      /* Message creation */
      bt_message *message = create_device_message(hostname, process_id, thread_id, device_id, subdevice_id, name, ts, duration, err,
                                                  clinterval_iter_g->dispatch->device_event_class,
                                                  clinterval_self_message_iterator_g,
                                                  clinterval_iter_g->dispatch->stream);
- 
+
      /* Set message */
      clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
 }
 
 static void create_and_enqueue_device_name_message(const char* hostname, const process_id_t process_id,
-                                                   const thapi_device_id device_id, 
+                                                   const thapi_device_id device_id,
                                                    const char* name) {
 
      /* Message creation */
@@ -146,19 +146,21 @@ static void clinterval_<%= dbt_event.name %>_callback(
   <%if dbt_event.name_unsanitized.start_with?('lttng_ust_opencl:') %>
     int64_t ns_from_origin;
     bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
-   
+
     <%if dbt_event.name_unsanitized.end_with?(START) %>
     state->host_start[hpt_function_name_t(hostname,process_id, thread_id, "<%= dbt_event.name_striped %>")] = ns_from_origin;
     <%elsif dbt_event.name_unsanitized.end_with?(STOP) %>
-    const uint64_t start_g = state->host_start[hpt_function_name_t(hostname,process_id, thread_id, "<%= dbt_event.name_striped %>")];
+
+    uint64_t &start_g = state->host_start.at(hpt_function_name_t(hostname,process_id, thread_id, "<%= dbt_event.name_striped %>"));
       <% if dbt_event.fields_name.include?('errcode_ret_val') %>
     create_and_enqueue_host_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>", start_g, ns_from_origin-start_g, errcode_ret_val);
       <% else %>
     create_and_enqueue_host_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>", start_g, ns_from_origin-start_g, 0);
       <% end %>
+    start_g = 0;
     <% end %>
   <% end %>
-  
+ 
   <%#                                                       
        |\/|  _  ._ _   _  ._      _.  _  _  _   _  _  _   _ 
        |  | (/_ | | | (_) | \/   (_| (_ (_ (/_ _> _> (/_ _> 
@@ -181,9 +183,9 @@ static void clinterval_<%= dbt_event.name %>_callback(
 
     int64_t ns_from_origin;
     bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
-    state->device_ts_to_llng_ts[hp_device_t(hostname,process_id, (thapi_device_id) device)] = ns_from_origin - device_timestamp; 
+    state->device_ts_to_llng_ts[hp_device_t(hostname,process_id, (thapi_device_id) device)] = ns_from_origin - device_timestamp;
   <% end %>
- 
+
   <%#
     _         _                    _                                   __          _                  
    |_) ._ _ _|_ o | o ._   _  o   | \  _     o  _  _     _. ._   _|   (_      |_  | \  _     o  _  _  
@@ -212,7 +214,7 @@ static void clinterval_<%= dbt_event.name %>_callback(
         }
     }
   <% end%>
- 
+
   <%# Map [ Tuple [ Hostnane, process, cl_command_queue ], Tuple [ device, subdevice] ] %>
   <% if dbt_event.name_unsanitized.end_with?(START) and dbt_event.name_striped.include?('clCreateCommandQueue') %>
     state->start_device[hpt_t(hostname,process_id, thread_id) ] =  (thapi_device_id) device;
@@ -221,7 +223,7 @@ static void clinterval_<%= dbt_event.name %>_callback(
     const thapi_device_id root_device = state->device_to_rootdevice[hp_device_t(hostname,process_id, device) ];
     if (root_device != 0) {
         state->command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)] = dsd_t(root_device, device) ;
-    } else { 
+    } else {
         state->command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)] = dsd_t(device, 0) ;
     }
   <% elsif dbt_event.name_unsanitized == "lttng_ust_opencl_devices:device_name" %>
@@ -235,10 +237,10 @@ static void clinterval_<%= dbt_event.name %>_callback(
    |_) ._ _ _|_ o | o ._   _  o   |_    ._   _ _|_ o  _  ._    ._   _. ._ _   _
    |   | (_) |  | | | | | (_| o   | |_| | | (_  |_ | (_) | |   | | (_| | | | (/_
                            _|
-   Map [ Tuple [ Hostnane, process, thread, function_name], Tuple [ device, subdevice] ]                   
+   Map [ Tuple [ Hostnane, process, thread, function_name], Tuple [ device, subdevice] ]
   %>
   <% if dbt_event.name_unsanitized == "lttng_ust_opencl_arguments:kernel_info" %>
-    clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;  
+    clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
     const hostname_t hostname{borrow_hostname(bt_evt)};
     const process_id_t process_id = borrow_process_id(bt_evt);
     state->kernel_to_name[hp_kernel_t(hostname,process_id,kernel)] = hostname_t(function_name);
@@ -251,7 +253,7 @@ static void clinterval_<%= dbt_event.name %>_callback(
     state->profiled_function_name_and_ts[hpt_t(hostname,process_id,thread_id)] = fn_ts_t(name,ns_from_origin);
     state->function_name_to_dsd[hpt_function_name_t(hostname,process_id,thread_id,name)] = state->command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)];
   <% end %>
-  
+
   <%#
     _         _                    _                        ___               
    |_) ._ _ _|_ o | o ._   _  o   |_ |  _. ._   _  _   _|    | o ._ _   _   _ 
@@ -261,7 +263,7 @@ static void clinterval_<%= dbt_event.name %>_callback(
   %>
 
   <% if dbt_event.name_unsanitized == "lttng_ust_opencl_profiling:event_profiling" %>
-    clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;  
+    clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
     const hostname_t hostname{borrow_hostname(bt_evt)};
     const process_id_t process_id = borrow_process_id(bt_evt);
     const thread_id_t thread_id = borrow_thread_id(bt_evt);
@@ -278,11 +280,11 @@ static void clinterval_<%= dbt_event.name %>_callback(
         state->event_to_function_name_and_ts.erase(hp_event);
     }
   <% elsif dbt_event.name_unsanitized == "lttng_ust_opencl_profiling:event_profiling_results" %>
-    clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state; 
+    clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
     const hostname_t hostname{borrow_hostname(bt_evt)};
     const process_id_t process_id = borrow_process_id(bt_evt);
     const hp_event_t hp_event{hostname,process_id, event};
-    
+ 
     //Should we check that end > start?
     uint64_t delta = end - start;
     if (queued_status != 0 or submit_status != 0 or start_status != 0) {
@@ -292,13 +294,13 @@ static void clinterval_<%= dbt_event.name %>_callback(
     if (state->event_to_function_name_and_ts.count(hp_event)) {
         const auto [thread_id,function_name,ts] = state->event_to_function_name_and_ts[hp_event];
         const auto [device,subdevice] = state->function_name_to_dsd[hpt_function_name_t(hostname,process_id,thread_id, function_name)];
-       
+
         const hp_device_t hp_device{hostname, process_id, device};
         // This need to be commented due to intel bugs where clGetEventProfilingInfo return host time
         //const uint64_t start_event = state->device_ts_to_llng_ts.count(hp_device) ? state->device_ts_to_llng_ts[hp_device] + start:  ts + (start - queued);
         const uint64_t start_event = ts + (start - queued);
 
-        // Check for error 
+        // Check for error
         create_and_enqueue_device_message(hostname.c_str(),process_id,thread_id,device, subdevice, function_name.c_str(),start_event,delta, delta == 0);
 
         state->event_to_function_name_and_ts.erase(hp_event);
@@ -318,7 +320,7 @@ static void clinterval_<%= dbt_event.name %>_callback(
 }
 <% end %>
 
-<%# 
+<%#
  ___                            
   |  ._  o _|_ o  _. | o _   _  
  _|_ | | |  |_ | (_| | | /_ (/_ 
@@ -329,4 +331,18 @@ void init_clinterval_callbacks(struct clinterval_dispatch  *opencl_interval) {
 <% $dbt_events.each do | dbt_event| %>
     clinterval_register_callback(opencl_interval, "<%= dbt_event.name_unsanitized %>", (void *) &clinterval_<%= dbt_event.name %>_callback);
 <% end %>
+}
+
+void finalize_clinterval_callbacks(clinterval_message_iterator *interval_dispatch_iter) {
+    clinterval_callbacks_state* state = (clinterval_callbacks_state*)  interval_dispatch_iter->callbacks_state;
+    auto map = state->host_start;
+    for (auto const [function_name, ts] : map) {
+        if (ts != 0) {
+            const auto [hostname,process_id, thread_id, f ]  = function_name;
+            std::cerr << "Warning: " << hostname
+                      << " PID " << process_id
+                      << " TID " << thread_id
+                      << " " << f << " was called but never returned" << std::endl;
+        }
+    }
 }
