--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -336,7 +336,7 @@ void init_clinterval_callbacks(struct clinterval_dispatch  *opencl_interval) {
 void finalize_clinterval_callbacks(clinterval_message_iterator *interval_dispatch_iter) {
     clinterval_callbacks_state* state = (clinterval_callbacks_state*)  interval_dispatch_iter->callbacks_state;
     auto map = state->host_start;
-    for (auto const [function_name, ts] : map) {
+    for (auto const &[function_name, ts] : map) {
         if (ts != 0) {
             const auto [hostname,process_id, thread_id, f ]  = function_name;
             std::cerr << "Warning: " << hostname
